--- a/src/home.css
+++ b/src/home.css
@@ -17,10 +17,10 @@ body {
 
 #title {
     display: flex;
-    align-items: flex-start;
-    font-size: 40px;
+    align-items: center;
+    height: 100px;
+    font-size: 70px;
     color: #4e4e50;
-    border: 1px solid red;
 }
 
 #mainContainer {
@@ -91,9 +91,9 @@ body {
     z-index: -2;
 }
 
-.hidden {
+/* .hidden {
     display: none;
-}
+} */
 
 .show {
     display: block;
@@ -195,4 +195,14 @@ body {
     top: 10px;
     left: 0px;
     transform: rotate(90deg);
+}
+
+
+.declareWinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    font-size: 4rem;
+    font-weight: 800;
 }
