--- a/src/home.css
+++ b/src/home.css
@@ -137,9 +137,9 @@ body {
     z-index: -2;
 }
 
-/* .hidden {
+.hidden {
     display: none;
-} */
+}
 
 .show {
     display: block;
@@ -178,6 +178,19 @@ body {
     min-width: 225px;
     max-width: 225px;
     height: 35px;
+}
+
+.placeMessageDiv {
+    font-size: 40px;
+}
+
+.axisSelection {
+    font-size: 1.1rem;
+    font-weight: 800;
+    height: 50px;
+    width: 80px;
+    border: none;
+    border-radius: 4px;
 }
 
 .carrier.yAxis {
